cluster/apps/static/arch/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arch
  namespace: networking
spec:
  type: ExternalName
  externalName: anemone.${PRIVATE_STATIC_DOMAIN}
