cluster/apps/static/arch/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch
  namespace: networking
  annotations:
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host arch.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arch
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: tls.arch
